--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -6,7 +6,7 @@
 
 
 <head th:include="fragment/headTag :: headTag">
-<title>hello-kata</title>
+<title>welcome</title>
 </head>
 
 
@@ -17,8 +17,6 @@
 
 <br />
 <br />
-<p th:text="#{hello}">Hello world !</p>
-<p th:text="${time}">time</p>
 
 <br />
 <br />
