--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Spring Security Camp</title>
-    </head>
-    <body>
-        <h1>Welcome !</h1>
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:tiles="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+    xmlns:sec="http://www.thymeleaf.org" th:lang="${#locale.language}">
+
+
+<head th:include="fragment/headTag :: headTag">
+<title>Spring Security Camp</title>
+</head>
+
+
+<body>
+    <div th:include="fragment/nav :: nav" />
+</body>
+<br />
+
+<br />
+<br />
+<h1>Welcome !</h1>
         <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
-    </body>
+<br />
+<br />
+<br />
+
+<div th:include="fragment/footer :: footer" />
 </html>
