sample thymeleaf and simple secure config added

--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -6,30 +6,20 @@
 
 
 <head th:include="fragment/headTag :: headTag">
-<title>welcome</title>
+<title>hello-kata</title>
 </head>
 
 
 <body>
     <div th:include="fragment/nav :: nav" />
 </body>
-<br />
 
-<br />
-<br />
 
-<br />
-<br />
-<p th:text="${message}">message ..</p>
-<br />
 
-<br />
 
- 
-</div>
-</div>
-<br />
-<br />
+
+wylogowany
+
 
 <div th:include="fragment/footer :: footer" />
 </html>
