logout to thymeleaf added

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -25,6 +25,15 @@
 
 <br />
 
+Logged : <p th:text="${#httpServletRequest.remoteUser}"></p>
+
+<div th:with="currentUser=${#httpServletRequest.userPrincipal?.principal}">
+<div th:if="${currentUser!=null}">
+<form th:action="@{/logout}" method="post">
+         <input type="submit" value="Log out" class="btn btn-primary btn-large"/>
+           
+          
+</form>
  
 </div>
 </div>
